web-infras/parser/tests/fixtures/babel/core/escape-keyword/invalid/output.txt
[SyntaxError]: Unexpect keyword in property name. (2,3)
2|  br\u{65}ak
 | ^
